--- a/file/package.json
+++ b/file/package.json
@@ -5,9 +5,10 @@
   "main": "index.js",
   "dependencies": {
     "body-parser": "^1.19.0",
-    "formidable": "^1.2.2",
     "express": "^4.17.1",
-    "multer": "^1.4.3"
+    "formidable": "^1.2.2",
+    "multer": "^1.4.3",
+    "ws": "^8.18.3"
   },
   "devDependencies": {},
   "scripts": {
