--- a/nodeDemo/package.json
+++ b/nodeDemo/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "then-fs": "^2.0.0"
+    "then-fs": "^2.0.0",
+    "ws": "^8.18.3"
   }
 }
